fix image stretch

--- a/src/views/RegisterLogin/index.scss
+++ b/src/views/RegisterLogin/index.scss
@@ -20,7 +20,7 @@
   
 
   img {
-    width: 60%;
+    width: 20vw;
     height: auto;
     min-width: 10rem;
     max-width: 20rem;
